# EPIJudge

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE.md  README.md  config.json  epijudge_ci_test_tool.py  index.html  problem_mapping.js  requirements.txt  sun_light.code-workspace
emotion_in_speech/: .#grid_search_svm.py  featureselection.py  heatmaps.py  preprocessing.py
epi_judge_cpp/: .cproject  .project  CMakeLists.txt  Makefile  a_b_sqrt2.cc  absent_value_array.cc  adding_credits.cc  advance_by_offsets.cc  alternating_array.cc  anagrams.cc  apply_permutation.cc  arbitrage.cc  binary_tree_node.h  binary_tree_with_parent_prototype.h  binomial_coefficients.cc  bonus.cc  bst_from_preorder.cc  bst_from_sorted_array.cc  bst_merge.cc  bst_node.h  bst_prototype_shared_ptr.h  bst_to_sorted_list.cc  buy_and_sell_stock.cc  buy_and_sell_stock_k_times.cc  buy_and_sell_stock_twice.cc  calendar_rendering.cc  circular_queue.cc  closest_int_same_weight.cc  cmake_install.cmake  collatz_checker.cc  combinations.cc  config.json  convert_base.cc  copy_posting_list.cc  count_bits.cc  count_inversions.cc  deadlock_detection.cc  defective_jugs.cc  delete_from_list.cc  delete_kth_last_from_list.cc  (+197 more)
epi_judge_cpp/test_framework/: any.h  binary_tree_utils.h  console_color.h  fmt_print.h  fmt_print_fwd.h  generic_test.h  generic_test_handler.h  json_parser.h  platform.h  random_sequence_checker.h  serialization_traits.h  test_complexity.h  test_config.h  test_failure.h  test_failure_exception.h  test_output.h  test_result.h  test_timer.h  test_utils.h  test_utils_console.h  test_utils_generic_main.h  test_utils_meta.h  test_utils_meta_test.h  test_utils_serialization_traits.h  timed_executor.h  timeout_exception.h  tri_bool.h  tribool.h
epi_judge_cpp/vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  absent_value_array.vcxproj  absent_value_array.vcxproj.filters  adding_credits.vcxproj  adding_credits.vcxproj.filters  advance_by_offsets.vcxproj  advance_by_offsets.vcxproj.filters  alternating_array.vcxproj  alternating_array.vcxproj.filters  anagrams.vcxproj  anagrams.vcxproj.filters  apply_permutation.vcxproj  apply_permutation.vcxproj.filters  arbitrage.vcxproj  arbitrage.vcxproj.filters  binomial_coefficients.vcxproj  binomial_coefficients.vcxproj.filters  bonus.vcxproj  bonus.vcxproj.filters  bst_from_preorder.vcxproj  bst_from_preorder.vcxproj.filters  bst_from_sorted_array.vcxproj  bst_from_sorted_array.vcxproj.filters  bst_merge.vcxproj  bst_merge.vcxproj.filters  bst_to_sorted_list.vcxproj  bst_to_sorted_list.vcxproj.filters  buy_and_sell_stock.vcxproj  buy_and_sell_stock.vcxproj.filters  buy_and_sell_stock_k_times.vcxproj  buy_and_sell_stock_k_times.vcxproj.filters  buy_and_sell_stock_twice.vcxproj  buy_and_sell_stock_twice.vcxproj.filters  calendar_rendering.vcxproj  calendar_rendering.vcxproj.filters  circular_queue.vcxproj  (+383 more)
epi_judge_cpp_solutions/: CMakeLists.txt  Makefile  a_b_sqrt2.cc  absent_value_array.cc  adding_credits.cc  advance_by_offsets.cc  alternating_array.cc  anagrams.cc  apply_permutation.cc  arbitrage.cc  binary_tree_node.h  binary_tree_with_parent_prototype.h  binomial_coefficients.cc  bonus.cc  bst_from_preorder.cc  bst_from_sorted_array.cc  bst_merge.cc  bst_node.h  bst_prototype_shared_ptr.h  bst_to_sorted_list.cc  buy_and_sell_stock.cc  buy_and_sell_stock_k_times.cc  buy_and_sell_stock_twice.cc  calendar_rendering.cc  circular_queue.cc  closest_int_same_weight.cc  collatz_checker.cc  combinations.cc  convert_base.cc  copy_posting_list.cc  count_bits.cc  count_inversions.cc  deadlock_detection.cc  defective_jugs.cc  delete_from_list.cc  delete_kth_last_from_list.cc  delete_node_from_list.cc  descendant_and_ancestor_in_bst.cc  directory_path_normalization.cc  do_lists_overlap.cc  (+193 more)
epi_judge_haskell/: EPIPrelude.hs  Makefile  TestParser.hs  TestRunner.hs  countBits.hs  rectangleIntersection.hs  rectangle_intersection.hs
epi_judge_haskell_solutions/: EPIPrelude.hs  Makefile  TestParser.hs  TestRunner.hs  countBits.hs  parity.hs  rectangleIntersection.hs  swapBits.hs
epi_judge_java/: Makefile
epi_judge_java_solutions/: Makefile
epi_judge_python/: a_b_sqrt2.py  absent_value_array.py  adding_credits.py  advance_by_offsets.py  alternating_array.py  anagrams.py  apply_permutation.py  arbitrage.py  binary_tree_node.py  binomial_coefficients.py  bonus.py  bst_from_preorder.py  bst_from_sorted_array.py  bst_merge.py  bst_node.py  bst_to_sorted_list.py  buy_and_sell_stock.py  buy_and_sell_stock_fail.py  buy_and_sell_stock_k_times.py  buy_and_sell_stock_twice.py  calendar_rendering.py  circular_queue.py  closest_int_same_weight.py  collatz_checker.py  combinations.py  config.json  convert_base.py  copy_posting_list.py  count_bits.py  count_inversions.py  deadlock_detection.py  defective_jugs.py  delete_from_list.py  delete_kth_last_from_list.py  delete_node_from_list.py  descendant_and_ancestor_in_bst.py  directory_path_normalization.py  do_lists_overlap.py  do_terminated_lists_overlap.py  doubly_list_node.py  (+189 more)
epi_judge_python_solutions/: Makefile  a_b_sqrt2.py  absent_value_array.py  adding_credits.py  advance_by_offsets.py  alternating_array.py  anagrams.py  apply_permutation.py  arbitrage.py  binary_tree_node.py  binary_tree_with_parent_prototype.py  binomial_coefficients.py  bonus.py  bst_from_preorder.py  bst_from_sorted_array.py  bst_merge.py  bst_node.py  bst_to_sorted_list.py  buy_and_sell_stock.py  buy_and_sell_stock_k_times.py  buy_and_sell_stock_twice.py  calendar_rendering.py  circular_queue.py  closest_int_same_weight.py  collatz_checker.py  combinations.py  convert_base.py  copy_posting_list.py  count_bits.py  count_inversions.py  deadlock_detection.py  defective_jugs.py  delete_from_list.py  delete_kth_last_from_list.py  delete_node_from_list.py  descendant_and_ancestor_in_bst.py  directory_path_normalization.py  do_lists_overlap.py  do_terminated_lists_overlap.py  (+193 more)
epi_judge_rust/: Cargo.toml
epi_judge_rust/src/: anagrams.rs  color.rs  is_string_permutable_to_palindrome.rs  lib.rs
(+1037 files in other folders)
