[package]
name = "epi_judge_rust"
version = "0.1.0"
authors = ["dragfire <asem.devajit@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[[bin]]
name = "anagrams"
path = "src/bin/anagrams.rs"

[[bin]]
name = "is_anonymous_letter_constructible"
path = "src/bin/is_anonymous_letter_constructible.rs"

[[bin]]
name = "is_string_permutable_to_palindrome"
path = "src/bin/is_string_permutable_to_palindrome.rs"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
